--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,84 @@
-*,*::after,*::before{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 body {
-  font-family: 'Kanit', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  margin: 0;
 
-code {
-  font-family: 'Kanit', sans-serif;
-}
-
-.logo-box{
-  display: flex;
-}
-.logo-box img{
-  margin-right: 20px;
-  height: 62px;
-  width: 63.02px;
-}
-.logo-content{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-.section{
-  width:78%;
-  margin: 100px auto;
-}
-.heading-medium{
-  font-family: 'Kanit';
+  color: #41444b;
+  background-color: #fff;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
   font-style: normal;
-  font-weight: 600;
-  font-size: 55px;
-  line-height: 64px;
-  color: #16213E;
-  margin: 15px 0;
-}
-.heading-small{
-  /* font-family: 'Kanit'; */
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 15px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #D2153D;
-  margin: 10px 0;
-}
-.title{
-  font-weight: 700;
   font-size: 17px;
   line-height: 28px;
-  color: #00215B;
-  margin: 10px 0;
+  scroll-behavior: smooth;
 }
-.btn{
- outline: none;
- border:none;
- padding:10px 20px;
- color: white;
- margin: 10px 0;
- cursor: pointer;
+
+.second-small-font {
+  font-size: 22px;
+  line-height: 24px;
 }
-.btn-primary{
- background: #D2153D;
+
+.nav-heading {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 28px;
+  color: black;
 }
-.hide{
-  display: none !important;
+
+.hero-title {
+  font-weight: 600;
+  font-size: 80px;
+  line-height: 84px;
+  color: #ffffff;
+}
+.control-dots {
+  text-align: start !important;
+  transform: translateY(200%);
+}
+
+.control-dots .dot {
+  background: #00215b !important;
+}
+.control-dots .dot.selected {
+  transform: scale(1.4);
+  background: #001ed3 !important;
+}
+.carousel.carousel-slider {
+  overflow: visible !important;
+}
+.contact-form {
+  background: url("../public/imgs/contact.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 390px;
+}
+
+.gradient {
+  background: linear-gradient(to right, #d2153d 50%, #00215b 50%) left;
+  transition: all 0.3s ease;
+}
+
+.footer-bottom {
+  font-family: "Montserrat", sans-serif;
+}
+
+@layer components {
+  .flexible {
+    @apply flex items-center justify-center gap-2;
+  }
+  .main-heading {
+    @apply font-[600] text-[55px] leading-[64px] text-black;
+  }
+  .red-text {
+    @apply leading-[15px] text-[14px] font-[500] text-[#D2153D] uppercase;
+  }
+  .input-common-class {
+    @apply block px-3 py-1.5 m-0  text-base font-normal text-gray-700 bg-clip-padding bg-white rounded-[8px] shadow-[0_4px_15px_rgba(124,124,124,0.14)] transition ease-in-out focus:text-gray-700 pl-5 focus:bg-white focus:border-blue-600 h-[73px] w-full focus:outline-none placeholder:text-[rgba(0,0,0,0.5)];
+  }
 }
