--- a/src/index.css
+++ b/src/index.css
@@ -64,21 +64,56 @@ body {
   transition: all 0.3s ease;
 }
 
+img {
+  max-width: 100%;
+}
+
 .footer-bottom {
   font-family: "Montserrat", sans-serif;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-heading {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 15px;
+  }
+  .second-small-font {
+    font-size: 10px;
+    line-height: 12px;
+  }
+  body {
+    font-size: 10px;
+    line-height: 16px;
+  }
+  .control-dots .dot {
+    width: 6px !important;
+    height: 6px !important;
+  }
+  .hero-title {
+    font-size: 32px;
+    line-height: 38px;
+  }
+  .gradient {
+    background: none;
+  }
+  .contact-form {
+    height: 100px;
+  }
 }
 
 @layer components {
   .flexible {
     @apply flex items-center justify-center gap-2;
   }
+
   .main-heading {
-    @apply font-[600] text-[55px] leading-[64px] text-black;
+    @apply font-[600] lg:text-[55px] lg:leading-[64px] text-[24px] leading-[28px] text-black;
   }
   .red-text {
-    @apply leading-[15px] text-[14px] font-[500] text-[#D2153D] uppercase;
+    @apply leading-[15px] lg:text-[14px] text-[12px] font-[500] text-[#D2153D] uppercase;
   }
   .input-common-class {
-    @apply block px-3 py-1.5 m-0  text-base font-normal text-gray-700 bg-clip-padding bg-white rounded-[8px] shadow-[0_4px_15px_rgba(124,124,124,0.14)] transition ease-in-out focus:text-gray-700 pl-5 focus:bg-white focus:border-blue-600 h-[73px] w-full focus:outline-none placeholder:text-[rgba(0,0,0,0.5)];
+    @apply block px-3 py-1.5 m-0  lg:text-base text-[14px] font-normal text-gray-700 bg-clip-padding bg-white rounded-[8px] shadow-[0_4px_15px_rgba(124,124,124,0.14)] transition ease-in-out focus:text-gray-700 lg:pl-5 focus:bg-white focus:border-blue-600 lg:h-[73px] h-[50px] w-full focus:outline-none placeholder:text-[rgba(0,0,0,0.5)];
   }
 }
