--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,20 @@ img {
   font-family: "Montserrat", sans-serif;
 }
 
+.hide-scrollbar {
+  height: 150px;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
+
 @media screen and (max-width: 1024px) {
   .nav-heading {
     font-weight: 500;
