--- a/src/index.css
+++ b/src/index.css
@@ -24,20 +24,21 @@ body {
 }
 
 .second-small-font {
-  font-size: 22px;
+  font-size: 20px;
   line-height: 24px;
+  font-weight: 600;
 }
 
 .nav-heading {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 28px;
-  color: #000259;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 35px;
+  color: #e33f61;
 }
 
 .hero-title {
   font-weight: 600;
-  font-size: 80px;
+  font-size: 68px;
   line-height: 84px;
   color: #ffffff;
 }
@@ -77,24 +78,18 @@ img {
   font-family: "Montserrat", sans-serif;
 }
 
-.hide-scrollbar {
-  overflow: scroll;
-  -ms-overflow-style: none;
-  /* for Internet Explorer, Edge */
-  scrollbar-width: none;
-  /* for Firefox */
-}
-
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
-  /* for Chrome, Safari, and Opera */
+.hero-graident {
+  background: linear-gradient(
+    107.57deg,
+    #00215b 2.35%,
+    rgba(0, 33, 91, 0) 97.44%
+  );
 }
 
 @media screen and (max-width: 1024px) {
   .nav-heading {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 15px;
+    font-size: 20px;
+    line-height: 24px;
   }
   .second-small-font {
     font-size: 10px;
@@ -128,7 +123,7 @@ img {
 
 @layer components {
   .flexible {
-    @apply flex items-center justify-center gap-2;
+    @apply flex gap-2 justify-center items-center;
   }
 
   .main-heading {
